Update blog to include openssl path to JAVA_OPTS in accumulo-env.sh (#208)